fix timer spacing

--- a/style.css
+++ b/style.css
@@ -504,7 +504,7 @@ footer {
 
   #readout {
     font-size: 0.85em;
-    position: fixed;
+    position: absolute;
     right: 20px;
     bottom: 20px;
     margin-top: 20%;
